--- a/templates/base.twig
+++ b/templates/base.twig
@@ -11,11 +11,12 @@
 	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/stylesDefault/globalStyles.css{{ versionerp }}">
 	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/stylesDefault/containerTable.css{{ versionerp }}">
 	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/stylesDefault/slider.css{{ versionerp }}">
+	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/stylesDefault/loader.css{{ versionerp }}">
 	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/stylesDefault/toggle.css{{ versionerp }}">
 	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/buttonUp.css{{ versionerp }}">
 	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/progressBar.css{{ versionerp }}">
 	<link rel="stylesheet" type="text/css" href="{{ path_for('Start')}}styles/alerts.css{{ versionerp }}">
-	<title>{% block title %}Efactura{% endblock %}</title>
+	<title>{% block title %}FactuWeb{% endblock %}</title>
 </head>
 <body class="d-flex flex-column" style="background-image: url('{{ path_for('Start')}}img/backGround.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
 	<div class="page-contentClass page-content" id="content">
@@ -98,5 +99,7 @@
 	<script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/sendPost.js{{ versionerp }}"></script>
 	<script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/utils.js{{ versionerp }}"></script>
 	<script type="text/javascript" src="{{ path_for('Start') }}scripts/modalAccountState.js{{ versionerp }}"></script>
+	<span class="loaderback" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(1, 1, 1, .6); z-index:998; display: none;"></span>
+	<span class="loader" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index:999; display: none;"></span>
 </body>
 </html>
