--- a/templates/feeServices.twig
+++ b/templates/feeServices.twig
@@ -8,33 +8,43 @@
 			<h5 class="font-italic">Facturación batch</h5>
 			<button class="btn btn-sm background-template-color2 text-template-background" onclick="downloadFeeService()"><i class="fas fa-cloud-download-alt"></i> Exportar</button>
 		</div>
-		<div class="card-body">
-			<div class="d-flex justify-content-between mb-3">
-				<div class="input-group">
+		<div class="card-body pt-2">
+			{# <div class="d-flex justify-content-between mb-3">
+				<div class="input-group" style="max-width: 400px;">
 					<input id="inputToSearch" type="text"  class="form-control form-control-sm shadow-sm m-1" onchange="searchClientFeeService(this)" onkeyup="this.onchange()" placeholder="Buscar cliente...">
 				</div>
 				<div class="d-flex flex-row-reverse">
-					<a class="btn btn-sm background-template-color2 text-template-background shadow-sm m-1" onclick="goToClients()" style="text-decoration: none;">Nueva cuota&nbsp;<i class="far fa-share-square"></i></a>
-					<button type="button" id="buttonModalInvoiceAllFeeService" class="btn btn-sm background-template-color2 text-template-background shadow-sm m-1" data-toggle="modal" data-target="#modalInvoiceAllFeeService" data-toggle="tooltip" data-placement="bottom" title="Se facturaran todos las cuotas facturables a la fecha.">
+					<a class="btn btn-sm background-template-color2 text-template-background shadow-sm m-1" href="{{ path_for('Clients')}}" style="text-decoration: none;">Nueva cuota&nbsp;<i class="far fa-share-square"></i></a>
+					<button type="button" class="btn btn-sm background-template-color2 text-template-background shadow-sm m-1" data-toggle="modal" data-target="#modalInvoiceAllFeeService" data-toggle="tooltip" data-placement="bottom" title="Se facturaran todos las cuotas facturables a la fecha.">
 						Facturar &nbsp; <i class="fas fa-receipt"></i>
 					</button>
 				</div>
+			</div> #}
+			<div class="d-flex justify-content-between mb-1">
+				<div class="input-group w-50 ml-0 mb-1">
+					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchClientFeeService(this)" onkeyup="this.onchange()" placeholder="Buscar Cliente...">
+				</div>
+				<div>
+					{# <a id="goClients" class="d-none" href="{{ path_for('Clients')}}" ></a> <!-- OCULTO --> #}
+					<button class="btn btn-sm background-template-color2 text-template-background shadow-sm mb-1" type="button" onclick="goToClients()"> Nueva cuota <i class="far fa-share-square"></i></button>
+					<button class="btn btn-sm background-template-color2 text-template-background shadow-sm mb-1" type="button" data-toggle="modal" data-target="#modalInvoiceAllFeeService" data-toggle="tooltip" title="Se facturaran todos las cuotas facturables a la fecha."><i class="fas fa-plus-circle"></i> Facturar</button>
+				</div>
 			</div>
-			<div id="containerTable">
-				<table class="table">
+			<div id="containerTable" style="max-height: 75vh;">
+				<table class="table table2 table-striped">
 					<thead class="background-template-color text-template-color">
 						<tr>
-							<th class="text-right" scope="col" style="width:18%;">Cliente</th>
-							<th class="text-right" scope="col" style="width:18%;">Servicio</th>
-							<th class="text-right toHidden2 notShow" scope="col" style="width: 8%;">Período</th>
-							<th class="text-right toHidden2 notShow" scope="col" style="width: 8%;">IVA</th>
+							<th class="text-right col-2" scope="col" style="">Cliente</th>
+							<th class="text-right col-2" scope="col" style="">Servicio</th>
+							{# <th class="text-right" scope="col" style="">Período</th> #}
+							{# <th class="text-right" scope="col" style="">IVA</th> #}
 							<!--th class="text-right toHidden2" scope="col"></th-->
-							<th class="text-right toHidden2 notShow" scope="col" style="width: 8%;">Costo</th>
-							<th class="text-right toHidden2" scope="col" style="width: 8%;">Importe</th>
-							<th class="text-right toHidden2" scope="col" style="width: 8%;">UI</th>
-							<th class="text-right toHidden2" scope="col" style="width: 8%;">Fecha</th>
-							<th class="text-center" scope="col" style="width:8%;">Vigente</th>
-							<th class="text-center" style="min-width: 6em; width:8%;" scope="col">Acción</th>
+							{# <th class="text-right" scope="col" style="width: 8%;">Costo</th> #}
+							<th class="text-right" scope="col" style="">Importe</th>
+							<th class="text-right" scope="col" style="">UI</th>
+							<th class="text-center" scope="col" style="">Fecha</th>
+							<th class="text-center" scope="col" style="">Vigente</th>
+							<th class="text-center" style="" scope="col">Acción</th>
 						</tr>
 					</thead>
 					<tbody id="tbodyFeeServices">
@@ -57,49 +67,58 @@
 				<div class="form-group">
 					<input type="text" class="form-control form-control-sm text-center shadow-sm" id="inputModifyFeeClient" readonly>
 				</div>
-				<div class="d-flex justify-content-center">
+				{# <div class="form-group mb-3">
+					<label class="mb-1" for="selectListIva">Impuesto</label>
+					<select class="custom-select custom-select-sm shadow-sm" id="selectListIva" onchange="changeIVA(this)" onkeypress="return keyPressCreateService(event)">
+						<option id="1" value="0,00" selected="selected">0,00 (Exento de IVA)</option>
+						<option id="2" value="10,00">10,00 (Gravado a Tasa Mínima)</option>
+						<option id="3" value="22,00">22,00 (Gravado a Tasa Básica)</option>
+					</select>
+				</div> #}
+
+				<div class="form-group mb-3">
 					<div class="form-group">
-						<label for="selectModifyFeeServices" class="text-mycolor">Servicios</label>
-						<select id="selectModifyFeeServices" class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm">
+						<label for="selectModifyFeeServices" class="mb-1">Servicios</label>
+						<select id="selectModifyFeeServices" class="custom-select custom-select-sm shadow-sm">
 						</select>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center">
-					<div class="form-group  w-100">
-						<label class="text-mycolor" for="exampleFormControlTextarea1">Descripcíon</label>
-						<textarea class="form-control shadow-sm" id="textAreaServiceSelected" style="resize: none;" rows="2" maxlength="80" readonly></textarea>
-					</div>
+				<div class="form-group mb-3">
+					{# <div class="form-group  w-100"> #}
+					<label class="mb-1" for="textAreaServiceSelected">Descripcíon</label>
+					<textarea class="form-control shadow-sm" id="textAreaServiceSelected" style="resize: none;" rows="2" maxlength="80" readonly></textarea>
+					{# </div> #}
 				</div>
-				<div class="d-flex justify-content-center">
-					<div class="form-group row">
-						<label for="selectNewFeeMonth" class="col-sm-3 col-form-label text-mycolor">Periodo</label>
-						<div class="col-sm-9">
-							<select id="selectModifyFeeMonth" class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm">
-								<option selected value="0">Mensual</option>
-								{% for period in periods %}
-								{% if period == "B" %}
-								<option value="22">Bimestral</option>
-								{% elseif period == "T" %}
-								<option value="33">Trimestral</option>
-								{% elseif period == "S" %}
-								<option value="66">Semestral</option>
-								{% endif %}
-								{% endfor %}
-								<option value="1">Enero</option>
-								<option value="2">Febrero</option>
-								<option value="3">Marzo</option>
-								<option value="4">Abril</option>
-								<option value="5">Mayo</option>
-								<option value="6">Junio</option>
-								<option value="7">Julio</option>
-								<option value="8">Agosto</option>
-								<option value="9">Septiembre</option>
-								<option value="10">Octubre</option>
-								<option value="11">Noviembre</option>
-								<option value="12">Diciembre</option>
-							</select>
-						</div>
-					</div>
+				<div class="form-group mb-3">
+					{# <div class="form-group row"> #}
+					<label for="selectNewFeeMonth" class="mb-1">Periodo</label>
+					{# <div class="col-sm-9"> #}
+					<select id="selectModifyFeeMonth" class="custom-select custom-select-sm shadow-sm">
+						<option selected value="0">Mensual</option>
+						{% for period in periods %}
+						{% if period == "B" %}
+						<option value="22">Bimestral</option>
+						{% elseif period == "T" %}
+						<option value="33">Trimestral</option>
+						{% elseif period == "S" %}
+						<option value="66">Semestral</option>
+						{% endif %}
+						{% endfor %}
+						<option value="1">Enero</option>
+						<option value="2">Febrero</option>
+						<option value="3">Marzo</option>
+						<option value="4">Abril</option>
+						<option value="5">Mayo</option>
+						<option value="6">Junio</option>
+						<option value="7">Julio</option>
+						<option value="8">Agosto</option>
+						<option value="9">Septiembre</option>
+						<option value="10">Octubre</option>
+						<option value="11">Noviembre</option>
+						<option value="12">Diciembre</option>
+					</select>
+					{# </div> #}
+					{# </div> #}
 				</div>
 			</div>
 			<div class="modal-footer justify-content-between">
@@ -120,7 +139,7 @@
 			</div>
 			<div class="modal-body">
 				<h5 class="text-center" id="messageInvoiceAllService"></h5>
-				<br><hr>
+				<hr>	
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="inputDateEmittedInvoiceAllService">Fecha emisión</label>
@@ -209,9 +228,9 @@
 	</div>
 </div>
 {% include("modalCancelVoucher.twig") %}
-{% include("buttonUp.twig") %}
+{# {% include("buttonUp.twig") %} #}
 {% include("progressBar.twig") %}
-{%block script%}
+{% block script %}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/index.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/feeServices.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/accountState.js{{ versionerp }}"></script>
@@ -220,7 +239,7 @@
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/showReplyMessage.js{{ versionerp }}"></script>
 <script type="text/javascript">
 	$(document).ready( function(){
-		let heightwindow = ($(document).height() * 55) / 100;
+		let heightwindow = ($(document).height() * 65) / 100;
 		$('#containerTable').css('height', heightwindow+'px');
 	});
 	loadFeeServices();
