--- a/templates/manualReceiptsProviders.twig
+++ b/templates/manualReceiptsProviders.twig
@@ -8,11 +8,12 @@
 			<h5>Recibos manuales de proveedores</h5>
 		</div>
 		<div class="card-body">
-			<div class="input-group mb-2 shadow-sm" style="min-width: 210px; max-width: 300px;">
-				<input type="text" class="form-control" onchange="searchManualReceiptReceived(this)" onkeyup="this.onchange()" aria-label="Sizing example input" placeholder="Buscar nombre...">
+			{# <div class="input-group w-50 mb-2 shadow-sm" style="min-width: 210px; max-width: 300px;"> #}
+			<div class="input-group w-50 mb-2 shadow-sm">
+				<input type="text" class="form-control form-control-sm" onchange="searchManualReceiptReceived(this)" onkeyup="this.onchange()" aria-label="Sizing example input" placeholder="Buscar nombre...">
 			</div>
-			<div id="containerTable">
-				<table class="table">
+			<div id="containerTable" style="max-height: 75vh;">
+				<table class="table table2 table-striped">
 					<thead class="background-template-color text-template-color">
 						<tr>
 							<th class="text-right" scope="col">Fecha</th>
@@ -32,27 +33,39 @@
 <div class="modal fade" id="modalModifyManualReceipt" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
-			<div class="modal-header bg-mycolor">
+			<div class="modal-header background-template-color">
 				<span class="modal-title text-white">Modificar recibo manual</span>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
-				<div class="d-flex justify-content-center">
+				{# <div class="d-flex justify-content-center">
 					<div class="input-group mb-3 w-75 shadow-sm">
 						<div class="input-group-prepend bg-mycolor text-white">
 							<span class="input-group-text bg-mycolor text-white" id="inputGroup-sizing-default">Fecha</span>
 						</div>
 						<input id="inputDateManualReceipt" type="date" class="form-control text-center" onkeypress="return keyPressModifyManualReceipt(event)">
 					</div>
+				</div> #}
+				<div class="">
+					<div class="row form-group mb-2">
+						<label class="col-2 m-auto" for="inputDateManualReceipt">Fecha</label>
+						<input type="date" class="form-control form-control-sm text-center col mr-3 shadow-sm" id="inputDateManualReceipt" onkeypress="return keyPressModifyManualReceipt(event)">
+					</div>
 				</div>
-				<div class="d-flex justify-content-center">
+				{# <div class="d-flex justify-content-center">
 					<div class="input-group mb-3 w-75 shadow-sm">
 						<div class="input-group-prepend bg-mycolor text-white">
 							<span class="input-group-text bg-mycolor text-white" id="inputGroup-sizing-default">Importe</span>
 						</div>
 						<input id="inputTotalManualReceipt" type="number" class="form-control text-center" onkeypress="return keyPressModifyManualReceipt(event)">
+					</div>
+				</div> #}
+				<div class="">
+					<div class="row form-group mb-2">
+						<label class="col-2 m-auto" for="inputTotalManualReceipt">Importe</label>
+						<input type="number" class="form-control form-control-sm text-center col mr-3 shadow-sm" id="inputTotalManualReceipt" onkeypress="return keyPressModifyManualReceipt(event)">
 					</div>
 				</div>
 			</div>
@@ -67,8 +80,8 @@
 <div class="modal fade" id="modalDeleteManualReceipt" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
-			<div class="modal-header bg-mycolor">
-				<h5 class="modal-title text-white">Borrar recibo manual</h5>
+			<div class="modal-header background-template-color">
+				<span class="modal-title text-white">Borrar recibo manual</span>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
@@ -91,12 +104,12 @@
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/utils/showReplyMessage.js{{ versionerp }}"></script>
 <script type="text/javascript">
 	$(document).ready( function(){
-		let heightwindow = ($(document).height() * 60) / 100;
+		let heightwindow = ($(document).height() * 65) / 100;
 		$('#containerTable').css('height', heightwindow+'px');
 	});
 	getManualReceiptReceived();
 	$('#containerTable').on('scroll', function() {
-		if($(this).scrollTop() + $(this).innerHeight() >= $(this)[0].scrollHeight - 2) {
+		if($(this).scrollTop() + $(this).innerHeight() >= ($(this)[0].scrollHeight) - 4) {
 			getManualReceiptReceived();
 		}
 	});
