--- a/templates/modalAddProduct.twig
+++ b/templates/modalAddProduct.twig
@@ -34,16 +34,16 @@
 						<textarea id="inputDetailProduct" class="form-control shadow-sm rounded-0" maxlength="400" style="resize: none;" rows="2"  onkeypress="return keyPressAddDetail(event, null, null)" tabindex=5></textarea> <!--onkeydown="return keyPressAddDetail(event, null,null)"-->
 					</div>
 				</div>
-				<div class="d-flex flex-row-reverse">
-					<div class="form-group col-md-3">
+				<div class="row flex-row-reverse">
+					<div class="form-group col">
 						<label for="inputTotalProduct" class="col-form-label col-form-label-sm">Importe</label>
 						<input type="number" class="form-control form-control-sm shadow-sm text-center" id="inputTotalProduct" readonly>
 					</div>
-					<div class="form-group col-md-2">
+					<div class="form-group col">
 						<label for="inputIVAProduct" class="col-form-label col-form-label-sm">IVA</label>
 						<input type="number" class="form-control form-control-sm shadow-sm text-center" id="inputIVAProduct" readonly>
 					</div>
-					<div class="form-group col-md-4">
+					<div class="form-group col-4">
 						<label for="inputTaxProduct" class="col-form-label col-form-label-sm">Impuesto</label>
 						<select class="custom-select custom-select-sm shadow-sm text-center" id="inputTaxProduct" tabindex=6>
 							{% for tax in listIVA %}
@@ -51,7 +51,7 @@
 							{% endfor %}
 						</select>
 					</div>
-					<div class="form-group col-md-2">
+					<div class="form-group col">
 						<label for="inputSubtotalProduct" class="col-form-label col-form-label-sm">Subtotal</label>
 						<input type="number" class="form-control form-control-sm shadow-sm text-center" id="inputSubtotalProduct" readonly>
 					</div>
