--- a/templates/modalSetPayments.twig
+++ b/templates/modalSetPayments.twig
@@ -10,10 +10,10 @@
 			<div class="modal-body">
                 <div id="containerPayments" class="border rounded shadow-sm p-2 w-100" style="height: 80%;"> <!-- ESTE DIV CONTENDRA TODOS LOS MEDIOS DE PAGOS QUE SE AGREGAN -->
                     <div class="row">
-                        <div class="col-8">
+                        <div class="col-6 pr-1">
                             <label for="x" class="col-form-label col-form-label-sm">Medio de pago: </label>
                         </div>
-                        <div class="col-4">
+                        <div class="col-6 p-1">
                             <label for="y" class="col-form-label col-form-label-sm">Monto: </label>
                         </div>
                     </div>
@@ -67,13 +67,13 @@
                     </label>
 
                     <label for="inputPriceSale22" class="label-decoration-venta mr-2"><b>Restante:</b>
-                        <input class="form-control form-control-sm text-right" type="float" readonly id="inputPriceSale22" value="0.00" tabindex="-1">
+                        <input class="form-control form-control-sm text-right" type="float" readonly id="inputPriceSale22" value="0.00" tabindex="-1" onchange="this.style.backgroundColor = (this.value == 0 ? '#2ebd4f' : (this.value < 0 ? '#ff7a87' : ''))">
                     </label>
                 </div>
 			</div>
 			<div class="modal-footer justify-content-between">
 				<button type="button" class="btn btn-danger shadow-sm" data-dismiss="modal">Cancelar</button>
-				<button id="btnConfirmAddDetail2" type="button" class="btn btn-success shadow-sm" onclick="insertNewDetail()"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Ctrl + Fin) </span></button>
+				<button id="btnConfirmSale" type="button" class="btn btn-success shadow-sm" onclick="createNewFactura()"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Ctrl + Fin) </span></button>
 			</div>
 		</div>
 	</div>
@@ -96,7 +96,7 @@
                             <option value="Tarjeta">Tarjeta</option>
                             <option value="Cheque">Cheque</option>
                             <option value="Giro">Giro</option>
-                            <option value="Deposito">Depósito</option>
+                            <option value="Depósito">Depósito</option>
                             <option value="Vale">Vale</option>
                             <option value="Pendiente">Pendiente</option>
                             <option value="Resguardo de IVA">Resguardo de IVA</option>
@@ -111,8 +111,8 @@
                 </div>
             </div>
             <div class="modal-footer justify-content-between">
-                <button id="modalInsertNewPaymentMethodButtonCancel" type="button" class="btn btn-danger shadow-sm" tabindex="3">Cancelar</button>
-                <button id="modalInsertNewPaymentMethodButtonConfirm" type="button" class="btn btn-success shadow-sm" tabindex="4">Confirmar</button>
+                <button id="modalInsertNewPaymentMethodButtonCancel" type="button" class="btn btn-danger shadow-sm" data-dismiss="modal" tabindex="3">Cancelar</button>
+                <button id="modalInsertNewPaymentMethodButtonConfirm" type="button" class="btn btn-success shadow-sm" tabindex="4">Confirmar (Ins)</button>
             </div>
         </div>
     </div>
