--- a/templates/pointsale.twig
+++ b/templates/pointsale.twig
@@ -3,7 +3,7 @@
 {% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center">
-	<div class="card shadow mt-4 mb-2" style="min-width: 350px;">
+	<div class="card shadow mt-4 mb-2" style="min-width: 780px;">
 		<div class="card-header d-flex justify-content-between background-template-color text-template-color font-italic">
 			<h5>Punto de venta</h5>
 		</div>
@@ -61,9 +61,9 @@
 							<div class="form-group col-md">
 								<label class="form-label-sm" for="inputDateExpirationVoucher">Fecha Vencimiento</label>
 								<input type="date" class="form-control form-control-sm shadow-sm text-center" id="inputDateExpirationVoucher">
-								<div class="form-check ml-2">
-									<input class="form-check-input" type="checkbox" id="inputNotUseExpirationDate">
-									<label class="form-check-label" for="gridCheck">
+								<div class="form-check mt-2">
+									<input class="form-check-input" type="checkbox" id="inputNotUseExpirationDate" onchange="switchExpirationDate(this)">
+									<label class="form-check-label" for="inputNotUseExpirationDate">
 										Sin vencimiento
 									</label>
 								</div>
@@ -106,7 +106,11 @@
 						</label>
 					</div>
 					<div class="d-flex flex-row-reverse">
+						{% if adenda is not empty %}
+						<div id="step-3" class="form-group w-100">
+						{% else %}
 						<div id="step-3" class="form-group w-100 d-none">
+						{% endif %}
 							<label for="inputAdenda">Adenda</label>
 							<textarea id="inputAdenda" class="form-control shadow-sm rounded-0" maxlength="200" rows="3">{{adenda}}</textarea>
 						</div>
@@ -116,7 +120,7 @@
 							<button id="discardSales" class="btn btn-secondary shadow-sm mt-3" onclick="discardSalesProducts()">Descartar</button>
 							<button id="nextStep" class="btn btn-success shadow-sm mt-3" onclick="nextStep()" tabindex="9" style="float:right;"><span class="maintext"> Siguiente </span>  <span class="shortcut"> (Ctrl + Fin) </span></button>
 							{# <button id="idButtonCreateNewFactura" class="btn btn-success shadow-sm mt-3 d-none" onclick="createNewFactura()" tabindex="9" style="float:right;"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Ctrl + Fin) </span></button> #}
-							<button id="idButtonShowModalPayment" class="btn btn-success shadow-sm mt-3 d-none" onclick="showModalPayment()" tabindex="9" style="float:right;"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Ctrl + Fin) </span></button>
+							<button id="idButtonShowModalPayment" class="btn btn-success shadow-sm mt-3 d-none" onclick="nextStep()" tabindex="9" style="float:right;"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Ctrl + Fin) </span></button>
 						</div>
 					</div>
 				</div>
@@ -130,6 +134,7 @@
 {% include("modalSeeVoucher.twig") %}
 {% include("modalSetClient.twig") %}
 {% include("modalSetPayments.twig") %}
+{% include("modalCancelVoucher.twig") %}
 {% include("progressBar.twig") %}
 {% block script %}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/index.js{{ versionerp }}"></script>
@@ -184,9 +189,14 @@
 					openModalGetPrices()
 				}
 				else if (code == 35 && e.ctrlKey){
-					nextStep();
+					console.log(productsInCart)
+					console.log(productsInCart.length)
+					if (countNonRemovedItems(productsInCart) > 0)
+						nextStep();
+					else
+						showReplyMessage(1, "Ningun producto ingresado", "Producto requerido", null);
 					// createNewFactura();
-				} 
+				}
 				else {
 					if ( character.length == 1 ){
 						barcode = barcode + character;
@@ -198,9 +208,12 @@
 				if (code == 27) {
 					// 'Escape' key pressed
 					e.preventDefault(); // Prevent the default behavior (closing the modal)
-					showConfirmMessage("¿Facturar como cliente final?", "Confirmar", setClientFinal(), "modalSetClient");
+					$('#modalConfirm').on('shown.bs.modal', function(){
+						$('#modalConfirmButtonSI').focus();
+					})
+					showConfirmMessage("¿Facturar como consumidor final?", "Confirmar", setClientFinal(), "modalSetClient");
 				}
-			} else if(elementFocusedID == "selectTypeVoucher"){
+			} else if(elementFocusedID == "selectTypeVoucher" || elementFocusedID == "inputDateExpirationVoucher" || elementFocusedID == "inputNotUseExpirationDate" || elementFocusedID == "inputAdenda"){
 				let code = (e.keyCode ? e.keyCode : e.which);
 				if (code == 35 && e.ctrlKey){
 					nextStep();
@@ -211,9 +224,25 @@
 				console.log(code);
 				if (code == 45) {
 					$('#btnAddPayment').click();
+				} else if(code == 35 && e.ctrlKey){
+					console.log('CREAR FACTURA')
+					createNewFactura()
+				}
+			} else if(elementFocusedID == "modalInsertNewPaymentMethodOptions" || elementFocusedID == "modalInsertNewPaymentMethodAmount"){
+				let code = (e.keyCode ? e.keyCode : e.which);
+				console.log(code);
+				if (code == 45) {
+					$('#modalInsertNewPaymentMethodButtonConfirm').click();
 				}
 			}
 		});
+
+		const countNonRemovedItems = (items) => {
+			return items.filter(item => 
+				item.removed !== true && // checks for boolean true
+				item.removed !== "true" // checks for string "true"
+			).length;
+		};
 	//////////////////////////////////////////////////////////////////////////////
 	});
 </script>
