--- a/templates/priceList.twig
+++ b/templates/priceList.twig
@@ -7,27 +7,29 @@
 		<div class="card-header d-flex justify-content-between background-template-color text-template-color font-italic">
 			<h5>Lista de artículos</h5>
 		</div>
-		<div class="card-body">
-			<div class="d-flex justify-content-between">
-				<div class="input-group w-50 shadow-sm mb-2">
+		<div class="card-body pt-2">
+			<div class="d-flex justify-content-between mb-1">
+				<div class="input-group w-50 shadow-sm ml-0 mb-1">
 					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchProduct()" onkeyup="this.onchange()" placeholder="Buscar artículo...">
 				</div>
-				<div class="col m-1" style="min-width: 170px; max-width: 250px;">
-					<select id="selectHeadingPriceList" class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm" onchange="searchProductByHeading()">
-					</select>
+				<div class="d-flex">
+					{# <div class="col mb-1" style="min-width: 170px; max-width: 250px;"> #}
+						<select id="selectHeadingPriceList" class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm mr-1" onchange="searchProductByHeading()" style="min-width: 100px; max-width: 250px;">
+						</select>
+					{# </div> #}
+					<button class="btn btn-sm background-template-color2 text-template-background shadow-sm mb-1" type="button" onclick="openModalNewProduct()" style="min-width: 90px "><i class="fas fa-plus-circle"></i> Nuevo</button>
 				</div>
-				<button class="btn btn-sm background-template-color2 text-template-background shadow-sm mb-2" type="button" onclick="openModalNewProduct()"><i class="fas fa-plus-circle"></i> Nuevo</button>
 			</div>
-			<div id="containerTable">
-				<table class="table">
+			<div id="containerTable" style="max-height: 75vh;">
+				<table class="table table-striped">
 					<thead class="background-template-color text-template-color" style="">
 						<tr>
-							<th class="text-left" scope="col" id="priceListTableColDescription" >Descripcíon</th>
-							<th class="text-left notShowInPhone" scope="col" id="priceListTableColDetail" >Detalle</th>
-							<th class="text-left notShowInPhone" scope="col" id="priceListTableColBrand" >Marca</th>
+							{# <th class="text-left" scope="col" id="priceListTableColDescription" >Descripcíon</th> #}
+							<th class="text-left notShowInPhone col-5" scope="col" id="priceListTableColDetail" >Detalle</th>
+							{# <th class="text-left notShowInPhone" scope="col" id="priceListTableColBrand" >Marca</th> #}
 							<!--th class="text-left notShowInPhone" scope="col" id="" >Rubro</th-->
 							<!--th class="text-center notShowInPhone" scope="col" id="" ></th-->
-							<th class="text-right notShowInPhone" scope="col" id="priceListTableColIva" >IVA</th>
+							<th class="text-right notShowInPhone" scope="col" id="priceListTableColIva"  >IVA</th>
 							<th class="text-right notShowInPhone" scope="col" id="priceListTableColCost" >Costo</th>
 							<th class="text-right" scope="col" id="priceListTableColAmount" >Importe</th>
 							<!--th class="text-right notShowInPhone" scope="col" id="" >Descuento</th-->
@@ -100,7 +102,7 @@
 					</div>
 					<div class="form-check form-check-inline">
 						<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUSD" value="USD" tabindex=8>
-						<label class="form-check-label" for="typeCoinUSD">Dolares</label>
+						<label class="form-check-label" for="typeCoinUSD">Dólares</label>
 					</div>
 				</div>
 				<div class="form-row mt-2">
@@ -143,7 +145,7 @@
 		</div>
 	</div>
 </div>
-{% include("buttonUp.twig") %}
+{# {% include("buttonUp.twig") %} #}
 {%block script%}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/index.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/priceList.js{{ versionerp }}"></script>
@@ -152,7 +154,7 @@
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/showReplyMessage.js{{ versionerp }}"></script>
 <script type="text/javascript">
 	$(document).ready( function(){
-		let heightwindow = ($(document).height() * 55) / 100;
+		let heightwindow = ($(document).height() * 65) / 100;
 		$('#containerTable').css('height', heightwindow+'px');
 	});
 	loadPriceList();
