--- a/templates/providers.twig
+++ b/templates/providers.twig
@@ -7,7 +7,7 @@
 		<div class="card-header d-flex justify-content-between background-template-color text-template-color font-italic">
 			<h5>Proveedores</h5>
 			<div>
-				<button type="button" class="btn background-template-color2" data-toggle="modal" data-target="#modalExportProviders">Exportar</button>
+				<button type="button" class="btn background-template-color2 btn-sm shadow-sm" data-toggle="modal" data-target="#modalExportProviders"> <i class="fas fa-cloud-download-alt"></i> Exportar</button>
 			</div>
 		</div>
 		<div class="card-body">
@@ -15,23 +15,30 @@
 				<div class="input-group m-1" style="min-width: 100px; max-width: 250px;">
 					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" style="min-width: 250px;" onchange="searchProviders(this)" onkeyup="this.onchange()" placeholder="Buscar nombre...">
 				</div>
-				<div class="form-check m-1" style="min-width: 100px; max-width: 200px;">
-					<input class="form-check-input" type="checkbox" onclick="providersWithBalance(this)" checked>
-					<label class="form-check-label" for="flexCheckDefault">Proveedores con saldo</label>
+				<div class="form-check m-1 pl-0" style="min-width: 100px; max-width: 200px; display: flex; align-items: center;">
+					<input class="form-check-input" id="checkboxProvidersWithBalance" type="checkbox" onclick="providersWithBalance(this)" checked style="margin: .25rem; position: static;">
+					<label class="form-check-label ml-1" for="checkboxProvidersWithBalance" style="cursor: pointer;">Proveedores con saldo</label>
 				</div>
 			</div>
-			<div id="containerTable">
-				<table class="table table2">
+			<div id="containerTable" style="max-height: 75vh;">
+				<table class="table table2 table-striped">
 					<thead class="background-template-color text-template-color" >
 						<tr>
-							<th class="text-right toHidden1" scope="col" style="width: 10%;">Documento</th>
+							{# <th class="text-right toHidden1" scope="col" style="width: 10%;">Documento</th>
 							<th class="text-right" scope="col" style="width: 15%;">Razón social</th>
 							<th class="text-right toHidden2" style="width: 15%;" scope="col">Dirección</th>
 							<th class="text-right toHidden2" scope="col" style="width: 10%;">Teléfono</th>
 							<th class="text-right toHidden2" scope="col" style="width: 17%;">Correo</th>
 							<th class="text-right toHidden1" style="min-width: 7em; width: 10%;" scope="col">Saldo $</th>
 							<th class="text-right toHidden1" style="min-width: 7em; width: 10%;" scope="col">Saldo U$S</th>
-							<th class="text-center" style="min-width: 6em;width: 8%;" scope="col">Acción</th>
+							<th class="text-center" style="min-width: 6em;width: 8%;" scope="col">Acción</th> #}
+
+							<th class="text-center col-2" scope="col">Documento</th>
+							<th class="text-center col-3" scope="col" >Razón social</th>
+							<th class="text-center col-3"  scope="col">Información</th>
+							<th class="text-center" scope="col">Saldos</th>
+							<th class="text-center" scope="col">Acción</th>
+
 						</tr>
 					</thead>
 					<tbody id="tbodyProviders">
@@ -84,30 +91,43 @@
 
 <!-- Modal que se muestra cuando se quieren exportar proveedores deudores, se pide fecha y está el botón de exportar -->
 <div class="modal fade" id="modalExportProviders" tabindex="-1" role="dialog" aria-labelledby="exportClientsModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-md" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-md" role="document">
     <div class="modal-content">
       <div class="modal-header background-template-color">
-        <h5 class="modal-title text-template-color" >Exportar proveedores con saldo</h5>
+        {# <h5 class="modal-title text-template-color" >Exportar proveedores con saldo</h5> #}
+        <span class="modal-title text-template-color" id="exportProvidersModalLabel">Exportar proveedores con saldo</span>
+
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-      	<div class="form-group col-md">
+      	{# <div class="form-group col-md">
 			<label class="form-label-sm" for="idInputDateExportProviders">Hasta </label>
 			<input type="date" class="form-control form-control-sm shadow-sm text-center" id="idInputDateExportProviders">
+		</div> #}
+		
+		<div class="col">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text custom-thing background-template-color text-template-color" style="line-height: 28px;">Hasta</span>
+				</div>
+				<input id="idInputDateExportProviders" type="date" class="form-control text-center">
+			</div>
 		</div>
+
       </div>
       <div class="modal-footer justify-content-between">
 		<button type="button" class="btn btn-danger shadow-sm" data-dismiss="modal">Cancelar</button>
-		<button class="btn background-template-color2 btn-sm shadow-sm" onclick="exportProvidersDeudores()" ><i class="fas fa-cloud-download-alt"></i> Exportar</button>
+		{# <button class="btn background-template-color2 btn-sm shadow-sm" onclick="exportProvidersDeudores()" ><i class="fas fa-cloud-download-alt"></i> Exportar</button> #}
+		<button class="btn btn-success text-white shadow-sm" onclick="exportProvidersDeudores()" ><i class="fas fa-cloud-download-alt"></i> Exportar</button>
 	  </div>
     </div>
   </div>
 </div>
 
 
-{% include("buttonUp.twig") %}
+{# {% include("buttonUp.twig") %} #}
 {% include("progressBar.twig") %}
 {%block script%}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/index.js{{ versionerp }}"></script>
@@ -117,7 +137,7 @@
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/utils/showReplyMessage.js{{ versionerp }}"></script>
 <script type="text/javascript">
 	$(document).ready( function(){
-		let heightwindow = ($(document).height() * 55) / 100;
+		let heightwindow = ($(document).height() * 65) / 100;
 		$('#containerTable').css('height', heightwindow+'px');
 
 		$('#idInputDateExportProviders').val(getCurrentDate());
