--- a/templates/services.twig
+++ b/templates/services.twig
@@ -7,26 +7,26 @@
 		<div class="card-header d-flex justify-content-between background-template-color text-template-color font-italic">
 			<h5>Servicios</h5>
 		</div>
-		<div class="card-body">
-			<div class="d-flex justify-content-between mb-2">
-				<div class="input-group m-1"  >
+		<div class="card-body pt-2">
+			<div class="d-flex justify-content-between mb-1">
+				<div class="input-group w-75 shadow-sm ml-0 mb-1">
 					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchService(this)" onkeyup="this.onchange()" placeholder="Buscar servicio...">
 				</div>
-				<button onclick="showCreateService()" class="btn btn-sm background-template-color2 text-template-background m-1 shadow-sm" accesskey="n"><u>N</u>ueva <i class="fas fa-plus-circle"></i></button>
+				<button class="btn btn-sm background-template-color2 text-template-background shadow-sm mb-1" type="button" onclick="showCreateService()"><i class="fas fa-plus-circle"></i> Nuevo</button>
 			</div>
-			<div id="containerTable">
-				<table class="table">
+			<div id="containerTable" style="max-height: 75vh;">
+				<table class="table table2 table-striped">
 					<thead class="background-template-color text-template-color">
 						<tr>
-							<th class="text-right" scope="col" style="width:20%;">Nombre</th>
-							<th class="text-right toHidden2" scope="col" style="width: 20%;">Descripcíon</th>
-							<th class="text-right toHidden2" scope="col" style="width: 10%;">IVA</th>
+							<th class="text-left col-4" scope="col" style="">Detalles</th>
+							{# <th class="text-right toHidden2" scope="col" style="width: 20%;">Descripcíon</th> #}
+							<th class="text-right" scope="col" style="">IVA</th>
 							<!--th class="text-right toHidden1" scope="col"></th-->
-							<th class="text-right toHidden2" scope="col" style="width: 10%;">Costo</th>
-							<th class="text-right" scope="col" style="width:10%;">Importe</th>
-							<th class="text-right toHidden1" scope="col" style="width: 10%;">UI</th>
-							<th class="text-center" scope="col" style="width:10%;">Estado</th>
-							<th class="text-center toHidden1" style="min-width: 7em; width: 10%;" scope="col">Acción</th>
+							<th class="text-right" scope="col" style="">Costo</th>
+							<th class="text-right" scope="col" style="">Importe</th>
+							<th class="text-right" scope="col" style="">UI</th>
+							<th class="text-center" scope="col" style="">Estado</th>
+							<th class="text-center" style="" scope="col">Acción</th>
 						</tr>
 					</thead>
 					<tbody id="tbodyServices">
@@ -65,50 +65,69 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<div class="form-group">
-					<label for="inputNameService">Nombre</label>
+				<div class="form-group mb-2">
+					<label class="mb-1" for="inputNameService">Nombre</label>
 					<input type="text" class="form-control form-control-sm text-center shadow-sm" id="inputNameService" onkeypress="return keyPressCreateService(event, this.value, 30)">
 				</div>
-				<div class="form-group">
-					<label for="textAreaDescriptionService">Descripción</label>
+				<div class="form-group mb-2">
+					<label class="mb-1" for="textAreaDescriptionService">Descripción</label>
 					<textarea class="form-control shadow-sm" id="textAreaDescriptionService" style="resize: none;" rows="2" maxlength="80" onkeypress="return keyPressCreateService(event, this.value, 80)"></textarea>
 				</div>
-				<div class="d-flex justify-content-center">
-					<div class="form-group">
-						<label for="inputCostService">Subtotal</label>
-						<input type="number" class="form-control form-control-sm text-center shadow-sm" onchange="writeCost(this)" onkeyup="this.onchange()" id="inputCostService" onkeypress="return keyPressCreateService(event, this.value, 10)">
-					</div>
+				<div class="form-group mb-2">
+					<label class="mb-1" for="inputCostService">Subtotal</label>
+					<input type="number" class="form-control form-control-sm text-center shadow-sm" onchange="writeCost(this)" onkeyup="this.onchange()" id="inputCostService" onkeypress="return keyPressCreateService(event, this.value, 10)">
 				</div>
 				<div class="d-flex justify-content-center">
-					<div class="form-group">
-						<label for="selectListIva">Impuesto</label>
-						<select class="custom-select custom-select-sm shadow-sm" id="selectListIva" onchange="changeIVA(this)" onkeypress="return keyPressCreateService(event)">
-							{% for iva in listIVA %}
-							<option id="{{ iva.idIVA }}" value="{{ iva.valor }}">{{ iva.valor }} ({{ iva.nombre }})</option>
-							{% endfor %}
-						</select>
+				</div>
+				<div class="form-group mb-3">
+					<label class="mb-1" for="selectListIva">Impuesto</label>
+					<select class="custom-select custom-select-sm shadow-sm" id="selectListIva" onchange="changeIVA(this)" onkeypress="return keyPressCreateService(event)">
+						{% for iva in listIVA %}
+						<option id="{{ iva.idIVA }}" value="{{ iva.valor }}">{{ iva.valor }} ({{ iva.nombre }})</option>
+						{% endfor %}
+					</select>
+				</div>
+				{# <div class="d-flex justify-content-center">
+				</div> #}
+				{# <div class="d-flex justify-content-center"> #}
+				<div class="row mb-2">
+					<div class="col">
+						<div class="form-control">
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUYU" checked onkeypress="return keyPressCreateService(event)"style="cursor: pointer;">
+								<label class="form-check-label" for="typeCoinUYU" style="cursor: pointer;">Pesos Uruguayos</label>
+							</div>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUSD" onkeypress="return keyPressCreateService(event)" style="cursor: pointer;">
+								<label class="form-check-label" for="typeCoinUSD" style="cursor: pointer;">Dólares</label>
+							</div>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUYI" onkeypress="return keyPressCreateService(event)" style="cursor: pointer;">
+								<label class="form-check-label" for="typeCoinUYI" style="cursor: pointer;">Unidad indexada</label>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center">
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUYU" onkeypress="return keyPressCreateService(event)">
-						<label class="form-check-label" for="typeCoinUYU">Pesos Uruguayos</label>
-					</div>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUSD" onkeypress="return keyPressCreateService(event)">
-						<label class="form-check-label" for="typeCoinUSD">Dolares</label>
-					</div>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUYI" onkeypress="return keyPressCreateService(event)">
-						<label class="form-check-label" for="typeCoinUYI">Unidad indexada</label>
-					</div>
+
+				{# <div class="form-check form-check-inline">
+					<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUYU" onkeypress="return keyPressCreateService(event)">
+					<label class="form-check-label" for="typeCoinUYU">Pesos Uruguayos</label>
 				</div>
-				<div class="d-flex justify-content-center">
-					<div class="form-group">
-						<label for="inputAmountService">Importe</label>
-						<input type="number" class="form-control form-control-sm text-center shadow-sm" onchange="writeAmount(this)" onkeyup="this.onchange()" id="inputAmountService" onkeypress="return keyPressCreateService(event, this.value, 10)">
-					</div>
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUSD" onkeypress="return keyPressCreateService(event)">
+					<label class="form-check-label" for="typeCoinUSD">Dolares</label>
 				</div>
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="radio" name="typeCoin" id="typeCoinUYI" onkeypress="return keyPressCreateService(event)">
+					<label class="form-check-label" for="typeCoinUYI">Unidad indexada</label>
+				</div> #}
+				{# </div> #}
+				<div class="form-group mb-2">
+					<label class="mb-1"  for="inputAmountService">Importe</label>
+					<input type="number" class="form-control form-control-sm text-center shadow-sm" onchange="writeAmount(this)" onkeyup="this.onchange()" id="inputAmountService" onkeypress="return keyPressCreateService(event, this.value, 10)">
+				</div>
+				{# <div class="d-flex justify-content-center">
+				</div> #}
 			</div>
 			<div class="modal-footer justify-content-between">
 				<button type="button" class="btn btn-danger shadow-sm" data-dismiss="modal">Cancelar</button>
@@ -117,7 +136,7 @@
 		</div>
 	</div>
 </div>
-{% include("buttonUp.twig") %}
+{# {% include("buttonUp.twig") %} #}
 {%block script%}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/index.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/services.js{{ versionerp }}"></script>
@@ -126,12 +145,12 @@
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/showReplyMessage.js{{ versionerp }}"></script>
 <script type="text/javascript">
 	$(document).ready( function(){
-		let heightwindow = ($(document).height() * 55) / 100;
+		let heightwindow = ($(document).height() * 65) / 100;
 		$('#containerTable').css('height', heightwindow+'px');
 	});
 	loadServices();
 	$('#containerTable').on('scroll', function() {
-		if($(this).scrollTop() + $(this).innerHeight() >= $(this)[0].scrollHeight - 2) {
+		if($(this).scrollTop() + $(this).innerHeight() >= ($(this)[0].scrollHeight) - 4) {
 			loadServices();
 		}
 	});
