--- a/templates/vouchersClients.twig
+++ b/templates/vouchersClients.twig
@@ -10,7 +10,7 @@
 				<button class="btn background-template-color2 btn-sm shadow-sm" data-toggle="modal" data-target="#modalExport" ><i class="fas fa-cloud-download-alt"></i> Exportar</button>
 				<button class="btn background-template-color2 btn-sm shadow-sm" data-toggle="modal" data-target="#modalExportVoucherDetails" ><i class="fas fa-cloud-download-alt"></i> Exportar detalles</button>
 				{% if systemSession.superUser == 'SI' %}
-				<button class="btn background-template-color2 btn-sm shadow-sm" onclick="updateSuperVouchers();"><i class="fas fa-sync-alt text-mycolor h5 mt-2"></i></button>
+				<button class="btn background-template-color2 btn-sm shadow-sm" onclick="updateSuperVouchers();"><i id="iconUpdateVouchersSuperUser" class="fas fa-sync-alt text-mycolor"></i></button>
 				{% endif %}
 			</div>
 		</div>
@@ -70,16 +70,16 @@
 					</select>
 				</div>
 			</div>
-			<div id="containerTable">
-				<table id="tableVouchersEmitted" class="table table2">
+			<div id="containerTable" style="max-height: 75vh;">
+				<table id="tableVouchersEmitted" class="table table2 table-striped">
 					<thead class="background-template-color text-template-color">
 						<tr>
-							<th class="text-right" scope="col">Documento</th>
-							<th class="text-right" scope="col">Cliente</th>
-							<th class="text-right toHidden1" scope="col">Fecha</th>
+							<th class="text-right col-2" scope="col">Documento</th>
+							<th class="text-right col-4" scope="col">Cliente</th>
+							<th class="text-right toHidden1 col-3" scope="col">Fecha</th>
 							<!--th class="text-right toHidden1" scope="col">Pago</th-->
 							<!--th class="text-right toHidden1" scope="col">Moneda</th-->
-							<th class="text-right toHidden1" scope="col">Total</th>
+							<th class="text-right toHidden1 col-3" scope="col">Total</th>
 						</tr>
 					</thead>
 					<tbody id="tbodyVouchersEmitted">
@@ -100,52 +100,62 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<div class="row d-flex justify-content-center">
-					<div class="col-5">
-						<div class="input-group mb-3">
+				<div class="row mb-2">
+					<div class="col">
+						<div class="input-group">
 							<div class="input-group-prepend">
-								<span class="input-group-text  background-template-color text-template-color">Inicio</span>
+								<span class="input-group-text custom-thing background-template-color text-template-color">Inicio</span>
 							</div>
 							<input id="inputDateInitExport" type="date" class="form-control text-center" >
 						</div>
 					</div>
-					<div class="col-5">
-						<div class="input-group mb-3">
+					<div class="col">
+						<div class="input-group">
 							<div class="input-group-prepend">
-								<span class="input-group-text background-template-color text-template-color">Fin</span>
+								<span class="input-group-text custom-thing background-template-color text-template-color">Fin</span>
 							</div>
 							<input id="inputDateFinishExport" type="date" class="form-control text-center">
 						</div>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center">
-					{% if resultTypeVouchers.result == 2 %}
-					<select id="selectTypeVoucherExport" class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm w-50">
-						<option value="0" selected>Todos los comprobantes</option>
-						{% for typeCFE in resultTypeVouchers.listResult %}
-						{% if typeCFE.nameCFE != null %}
-						<option value="{{ typeCFE.typeCFE }}">{{ typeCFE.nameCFE }}</option>
+				<div class="row mb-2">
+					<div class="col">
+						{% if resultTypeVouchers.result == 2 %}
+						<select id="selectTypeVoucherExport" class="custom-select shadow-sm">
+							<option value="0" selected>Todos los comprobantes</option>
+							{% for typeCFE in resultTypeVouchers.listResult %}
+							{% if typeCFE.nameCFE != null %}
+							<option value="{{ typeCFE.typeCFE }}">{{ typeCFE.nameCFE }}</option>
+							{% endif %}
+							{% endfor %}
+						</select>
 						{% endif %}
-						{% endfor %}
-					</select>
-					{% endif %}
-				</div>
-				<div class="d-flex justify-content-center mt-3">
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="type" id="radioUnifyCoin" value="option1">
-						<label class="form-check-label" for="radioUnifyCoin">Unificado en pesos Uruguayos</label>
-					</div>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="type" id="iradioDiscriminateCoin" value="option2">
-						<label class="form-check-label" for="radioDiscriminateCoin">Discriminado por moneda</label>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center mt-2">
-					<div class="form-check">
-						<input class="form-check-input" type="checkbox" id="includeReceipts" checked>
-						<label class="form-check-label" for="flexCheckChecked">
-							Incluir recibos de cobranza
-						</label>
+				<div class="row mb-2">
+					<div class="col">
+						<div class="form-control">
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="type" id="radioUnifyCoin" value="option1">
+								<label class="form-check-label" for="radioUnifyCoin">Unificado en pesos Uruguayos</label>
+							</div>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="type" id="radioDiscriminateCoin" value="option2">
+								<label class="form-check-label" for="radioDiscriminateCoin">Discriminado por moneda</label>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<div class="form-control">
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" id="includeReceipts" checked>
+								<label class="form-check-label" for="includeReceipts">
+									Incluir recibos de cobranza
+								</label>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -168,76 +178,89 @@
 				</button>
 			</div>
 			<div class="modal-body">
-
-				<div class="row d-flex justify-content-center">
-					<div class="col-10">
-						<div class="form-check">
-							<input class="form-check-input" type="checkbox" id="inputCheckClientExportVoucherDetails" onchange="enableClientSearchExportVoucherDetails()" checked>
-							<label class="form-check-label" id="labelCheckClientExportVoucherDetails" for="inputCheckClientExportVoucherDetails">
-								Todos los clientes
-							</label>
-						</div>
-					</div>
-				</div>
-				<div class="row d-flex justify-content-center">
-					<div class="col-10">
-						<div class="input-group mb-3">
-							<div class="input-group-prepend">
-								<span class="input-group-text background-template-color text-template-color">Cliente</span>
+				<div class="col mb-2 form-control" style="height: calc(76px + .5rem);">
+					<div class="row mb-2">
+						<div class="col">
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" id="inputCheckClientExportVoucherDetails" onchange="enableClientSearchExportVoucherDetails()" checked>
+								<label class="form-check-label" id="labelCheckClientExportVoucherDetails" for="inputCheckClientExportVoucherDetails">
+									Todos los clientes
+								</label>
 							</div>
-							<input list="inputListClientExportVoucherDetails" id="inputDatalistExportVoucherDetails" type="search" class="form-control" onsearch="getBusinessExportVoucherDetails()" onkeyup="this.onsearch()" placeholder="Buscar cliente por nombre o documento." readonly disabled>
-							<datalist id="inputListClientExportVoucherDetails" ></datalist>
-
+						</div>
+					</div>
+					<div class="row mb-2">
+						<div class="col">
+							<div class="input-group mb-3">
+								<div class="input-group-prepend">
+									<span class="input-group-text background-template-color text-template-color">Cliente</span>
+								</div>
+								<input list="inputListClientExportVoucherDetails" id="inputDatalistExportVoucherDetails" type="search" class="form-control" onsearch="getBusinessExportVoucherDetails()" onkeyup="this.onsearch()" placeholder="Buscar cliente por nombre o documento." readonly disabled>
+								<datalist id="inputListClientExportVoucherDetails" ></datalist>
+							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="row d-flex justify-content-center">
-					<div class="col-5">
-						<div class="input-group mb-3">
+				<div class="row mb-2">
+					<div class="col">
+						<div class="input-group">
 							<div class="input-group-prepend">
-								<span class="input-group-text  background-template-color text-template-color">Desde</span>
+								<span class="input-group-text custom-thing background-template-color text-template-color" style="line-height: 28px;">Desde</span>
 							</div>
 							<input id="inputDateInitExportVoucherDetails" type="date" class="form-control text-center" >
 						</div>
 					</div>
-					<div class="col-5">
-						<div class="input-group mb-3">
+					<div class="col">
+						<div class="input-group">
 							<div class="input-group-prepend">
-								<span class="input-group-text background-template-color text-template-color">Hasta</span>
+								<span class="input-group-text custom-thing background-template-color text-template-color" style="line-height: 28px;">Hasta</span>
 							</div>
 							<input id="inputDateFinishExportVoucherDetails" type="date" class="form-control text-center">
 						</div>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center">
-					{% if resultTypeVouchers.result == 2 %}
-					<select id="selectTypeVoucherExportVoucherDetails" class="custom-select custom-select-sm background-template-color2 text-template-background shadow-sm w-50">
-						<option value="0" selected>Todos los comprobantes</option>
-						{% for typeCFE in resultTypeVouchers.listResult %}
-						{% if typeCFE.nameCFE != null %}
-						<option value="{{ typeCFE.typeCFE }}">{{ typeCFE.nameCFE }}</option>
+
+				<div class="row mb-2">
+					<div class="col">
+						{% if resultTypeVouchers.result == 2 %}
+						<select id="selectTypeVoucherExportVoucherDetails" class="custom-select shadow-sm">
+							<option value="0" selected>Todos los comprobantes</option>
+							{% for typeCFE in resultTypeVouchers.listResult %}
+							{% if typeCFE.nameCFE != null %}
+							<option value="{{ typeCFE.typeCFE }}">{{ typeCFE.nameCFE }}</option>
+							{% endif %}
+							{% endfor %}
+						</select>
 						{% endif %}
-						{% endfor %}
-					</select>
-					{% endif %}
-				</div>
-				<div class="d-flex justify-content-center mt-3">
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="type" id="radioUnifyCoinVoucherDetails" value="option1">
-						<label class="form-check-label" for="radioUnifyCoinVoucherDetails">Unificado en pesos Uruguayos</label>
-					</div>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="type" id="iradioDiscriminateCoinVoucherDetails" value="option2">
-						<label class="form-check-label" for="iradioDiscriminateCoinVoucherDetails">Discriminado por moneda</label>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center mt-2">
-					<div class="form-check">
-						<input class="form-check-input" type="checkbox" id="includeReceiptsVoucherDetails" checked>
-						<label class="form-check-label" for="includeReceiptsVoucherDetails">
-							Incluir recibos de cobranza
-						</label>
+
+				<div class="row mb-2">
+					<div class="col">
+						<div class="form-control">
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="type" id="radioUnifyCoinVoucherDetails" value="option1">
+								<label class="form-check-label" for="radioUnifyCoinVoucherDetails">Unificado en pesos Uruguayos</label>
+							</div>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="type" id="iradioDiscriminateCoinVoucherDetails" value="option2">
+								<label class="form-check-label" for="iradioDiscriminateCoinVoucherDetails">Discriminado por moneda</label>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col">
+						<div class="form-control">
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" id="includeReceiptsVoucherDetails" checked>
+								<label class="form-check-label" for="includeReceiptsVoucherDetails">
+									Incluir recibos de cobranza
+								</label>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -251,7 +274,7 @@
 {% include("progressBar.twig") %}
 {% include("modalSeeVoucher.twig") %}
 {% include("modalCancelVoucher.twig") %}
-{% include("buttonUp.twig") %}
+{# {% include("buttonUp.twig") %} #}
 {%block script%}
 <script type="text/javascript" src="{{ path_for('Start')}}scripts/index.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/vouchersEmitted.js{{ versionerp }}"></script>
@@ -261,9 +284,10 @@
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/utils.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/sendPost.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/showReplyMessage.js{{ versionerp }}"></script>
+{# <script type="text/javascript" src="{{ path_for('Start') }}scripts/base.js{{ versionerp }}"></script> #}
 <script type="text/javascript">
 	$(document).ready( function(){
-		let heightwindow = ($(document).height() * 60) / 100;
+		let heightwindow = ($(document).height() * 65) / 100;
 		$('#containerTable').css('height', heightwindow+'px');
 	});
 	loadVouchersEmitted();
